--- a/assignments/index.html
+++ b/assignments/index.html
@@ -3,12 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <title>Assignments - Anis Batrisyia Rosli</title>
+    <style>
+        body {
+          background-color: hsl(310, 51%, 89%);
+          font-family: Arial, Helvetica, sans-serif;
+        }   
+        .container {
+          width: 960px;
+          margin: 0 auto;
+        }
+        header {
+          text-align: center;
+          border-bottom: 1px solid #c76969;
+        }
+        h1 {
+          text-transform: uppercase;
+        }
+        h2 {
+          font-size: 24px;
+          color: hsla(186, 13%, 32%, 0.98);
+        }
+        img {
+          aspect-ratio: 1/1;
+          object-fit: cover;
+          border-radius: 999px;
+          border: 6px solid #c76969;
+        }
+      </style>
 </head>
 <body>
 
-    <h1>Assignments - Anis Batrisyia Rosli</h1>
+    <div class="container">
 
-    <p>Advertising and Public Relation</p>
+<header>
+    <h1>Anis Batrisyia Rosli</h1>
+    <img src="/image/anisbatrisyiarosli.jpg" alt="Photo of Anis" width="300px">
+</header> 
+
+<main>
+    <h2>About Me</h2>
+    <p>A senior international student from Malaysia majoring in Advertising and Public Relation</p>
+
+    <h2>Classes Of The Semester</h2>
+    <p>Media Law, Interactive Media Design, ADPR Campaign, Heartland</p>
+
+    <h2>Outside Of Class</h2>
+    <p>Hiking, travel, music</p>
+
+    <h2>After Graduation</h2>
+    <p>Plan to move back to Malaysia to work at a PR agency</p>
+</main>
+
+</div>
 
 </body>
 </html>
