--- a/assignments/index.html
+++ b/assignments/index.html
@@ -3,56 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <title>Assignments - Anis Batrisyia Rosli</title>
-    <style>
-        body {
-          background-color: hsl(310, 51%, 89%);
-          font-family: Arial, Helvetica, sans-serif;
-        }   
-        .container {
-          width: 960px;
-          margin: 0 auto;
-        }
-        header {
-          text-align: center;
-          border-bottom: 1px solid #c76969;
-        }
-        h1 {
-          text-transform: uppercase;
-        }
-        h2 {
-          font-size: 24px;
-          color: hsla(186, 13%, 32%, 0.98);
-        }
-        img {
-          aspect-ratio: 1/1;
-          object-fit: cover;
-          border-radius: 999px;
-          border: 6px solid #c76969;
-        }
-      </style>
+   <link rel="stylesheet" href="css\styles.css">
 </head>
 <body>
 
     <div class="container">
 
 <header>
-    <h1>Anis Batrisyia Rosli</h1>
-    <img src="/image/anisbatrisyiarosli.jpg" alt="Photo of Anis" width="300px">
+    <h1>Interactive Media Design</h1>
 </header> 
+<nav>
+<ul>
+  <li>About</li>
+   <li>Work</li>
+    <li>Contact</li>
+</ul> 
+</nav>
+
+<section>
+  <h2>Anis Batrisyia Rosli</h2>
 
 <main>
-    <h2>About Me</h2>
+    <h3>About Me</h3>
     <p>A senior international student from Malaysia majoring in Advertising and Public Relation</p>
 
-    <h2>Classes Of The Semester</h2>
+    <h3>Classes Of The Semester</h3>
     <p>Media Law, Interactive Media Design, ADPR Campaign, Heartland</p>
 
-    <h2>Outside Of Class</h2>
+    <h3>Outside Of Class</h3>
     <p>Hiking, travel, music</p>
 
-    <h2>After Graduation</h2>
+    <h3>After Graduation</h3>
     <p>Plan to move back to Malaysia to work at a PR agency</p>
 </main>
+<aside><img src="image/anisbatrisyiarosli.jpg" alt="Photo of Anis">
+</aside>
+<footer>
+  <p>&copy; 2025 Anis Batrisyia Rosli</p>
+</footer>
 
 </div>
 
