Change background tiles

--- a/assignments/contact.html
+++ b/assignments/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Assignments - Anis Batrisyia Rosli</title>
+    <title>Contact - Anis Batrisyia Rosli</title>
    <link rel="stylesheet" href="css\styles.css">
 </head>
 <body>
@@ -10,17 +10,19 @@
     <div class="container">
 
 <header>
-    <h1>Interactive Media Design</h1>
+    <h1>Contact</h1>
 </header> 
-<nav>
-<ul> class="menu-items">
+
+<nav>  
+<ul class="menu-items">
+
   <li><a href ="index.html">About</a></li>
    <li><a href="work.html">Work</a></li>
     <li><a href="contact.html">Contact</a></li>
 </ul> 
 </nav>
 
-<section>
+<section> 
   <h2>Anis Batrisyia Rosli</h2>
 
 <main>
@@ -42,7 +44,7 @@
   <p>&copy; 2025 Anis Batrisyia Rosli</p>
 </footer>
 
-</div> <!--container closes-->
+</div>
 
 </body>
 </html>
