--- a/assignments/work.html
+++ b/assignments/work.html
@@ -10,13 +10,13 @@
     <div class="container">
 
 <header>
-    <h1>Interactive Media Design</h1>
+    <h1>Work</h1>
 </header> 
 <nav>
 <ul> class="menu-items">
   <li><a href ="index.html">About</a></li>
-   <li><a href="work.html">Work</a></li>
-    <li><a href="contact.html">Contact</a></li>
+  <li><a href="work.html">Work</a></li>
+   <li><a href="contact.html">Contact</a></li>
 </ul> 
 </nav>
 
@@ -42,7 +42,7 @@
   <p>&copy; 2025 Anis Batrisyia Rosli</p>
 </footer>
 
-</div> <!--container closes-->
+</div>
 
 </body>
 </html>
