--- a/assignments/contact.html
+++ b/assignments/contact.html
@@ -22,23 +22,16 @@
 </ul> 
 </nav>
 
-<section> 
-  <h2>Anis Batrisyia Rosli</h2>
+<section class="col-span-4"> 
+  <h2>Links</h2>
+  <p>Links to go to social media or other website could go there.</p>
+</section>
 
-<main>
-    <h3>About Me</h3>
-    <p>A senior international student from Malaysia majoring in Advertising and Public Relation</p>
+   
 
-    <h3>Classes Of The Semester</h3>
-    <p>Media Law, Interactive Media Design, ADPR Campaign, Heartland</p>
-
-    <h3>Outside Of Class</h3>
-    <p>Hiking, travel, music</p>
-
-    <h3>After Graduation</h3>
-    <p>Plan to move back to Malaysia to work at a PR agency</p>
-</main>
-<aside><img src="image/anisbatrisyiarosli.jpg" alt="Photo of Anis">
+<aside class="col-span-8"> 
+  <h2>Contact</h2>
+  <p>Contact page with ways to email me. We can have links, an email form, or other ways to communicate with us or the company.</p>
 </aside>
 <footer>
   <p>&copy; 2025 Anis Batrisyia Rosli</p>
