--- a/assignments/index.html
+++ b/assignments/index.html
@@ -13,31 +13,34 @@
     <h1>Interactive Media Design</h1>
 </header> 
 <nav>
-<ul> class="menu-items">
+<ul class="menu-items">
   <li><a href ="index.html">About</a></li>
    <li><a href="work.html">Work</a></li>
     <li><a href="contact.html">Contact</a></li>
 </ul> 
 </nav>
 
-<section>
+<section class="col-span-8">
   <h2>Anis Batrisyia Rosli</h2>
 
-<main>
-    <h3>About Me</h3>
-    <p>A senior international student from Malaysia majoring in Advertising and Public Relation</p>
+  <h3>About Me</h3>
+  <p>A senior international student from Malaysia majoring in Advertising and Public Relation</p>
 
-    <h3>Classes Of The Semester</h3>
-    <p>Media Law, Interactive Media Design, ADPR Campaign, Heartland</p>
+  <h3>Classes Of The Semester</h3>
+  <p>Media Law, Interactive Media Design, ADPR Campaign, Heartland</p>
 
-    <h3>Outside Of Class</h3>
-    <p>Hiking, travel, music</p>
+  <h3>Outside Of Class</h3>
+  <p>Hiking, travel, music</p>
 
-    <h3>After Graduation</h3>
-    <p>Plan to move back to Malaysia to work at a PR agency</p>
-</main>
-<aside><img src="image/anisbatrisyiarosli.jpg" alt="Photo of Anis">
+  <h3>After Graduation</h3>
+  <p>Plan to move back to Malaysia to work at a PR agency</p>
+</section>
+
+<aside class="col-span-4">
+  <img src="image/anisbatrisyiarosli.jpg" alt="Photo of Anis">
 </aside>
+
+
 <footer>
   <p>&copy; 2025 Anis Batrisyia Rosli</p>
 </footer>
