--- a/assignments/work.html
+++ b/assignments/work.html
@@ -13,7 +13,7 @@
     <h1>Work</h1>
 </header> 
 <nav>
-<ul> class="menu-items">
+<ul> 
   <li><a href ="index.html">About</a></li>
   <li><a href="work.html">Work</a></li>
    <li><a href="contact.html">Contact</a></li>
@@ -21,23 +21,28 @@
 </nav>
 
 <section>
-  <h2>Anis Batrisyia Rosli</h2>
+  <h2>Work</h2>
+</section>
 
-<main>
-    <h3>About Me</h3>
-    <p>A senior international student from Malaysia majoring in Advertising and Public Relation</p>
+<section class="col-span-4">
+  <img src="image/anisbatrisyiarosli.jpg" alt="Photo of Anis" class="circle">
+  <h3>Project</h3>
+  <p>Description goes here</p>
+</section>
 
-    <h3>Classes Of The Semester</h3>
-    <p>Media Law, Interactive Media Design, ADPR Campaign, Heartland</p>
+<section class="col-span-4">
+  <img src="image/anisbatrisyiarosli.jpg" alt="Photo of Anis" class="circle">
+  <h3>Project 2</h3>
+  <p>Description goes here</p>
+</section>
 
-    <h3>Outside Of Class</h3>
-    <p>Hiking, travel, music</p>
+<section class="col-span-4">
+  <img src="image/anisbatrisyiarosli.jpg" alt="Photo of Anis" class="circle">
+  <h3>Project 3</h3>
+  <p>Description goes here</p>
+</section>
 
-    <h3>After Graduation</h3>
-    <p>Plan to move back to Malaysia to work at a PR agency</p>
-</main>
-<aside><img src="image/anisbatrisyiarosli.jpg" alt="Photo of Anis">
-</aside>
+
 <footer>
   <p>&copy; 2025 Anis Batrisyia Rosli</p>
 </footer>
