Added CSS Links

--- a/assignments/index.html
+++ b/assignments/index.html
@@ -37,7 +37,8 @@
 </section>
 
 <aside class="col-span-4">
-  <img src="image/anisbatrisyiarosli.jpg" alt="Photo of Anis">
+  <p><img src="image/anisbatrisyiarosli.jpg" alt="Photo of Anis"></p>
+  <a href="https://www.linkedin.com/in/anis-batrisyia-rosli-321719271" class="button">Connect on LinkedIn</a>
 </aside>
 
 
