--- a/assignments/work.html
+++ b/assignments/work.html
@@ -12,6 +12,7 @@
 <header>
     <h1>Work</h1>
 </header> 
+
 <nav>
 <ul> 
   <li><a href ="index.html">About</a></li>
@@ -21,12 +22,37 @@
 </nav>
 
 <section>
-  <h2>Work</h2>
+  <h2>Recent Projects</h2>
+</section>
+
+<!-- Card Section -->
+
+<section class="work-secton">
+  <div class="card">
+  <img src="image/Advertising.jpg" alt="Advertising">
+  <h3 class="card-title">Advertising</h3>
+  <p class="card-text">Description goes here</p>
+  <a class="button" href="https://www.linkedin.com/in/anis-batrisyia-rosli-321719271/" target="_blank">Learn More</a>
+  </div>
+
+  <div class="card">
+    <img src="image/Poster.jpg" alt="Poster">
+    <h3 class="card-title">Poster</h3>
+    <p class="card-text">Description goes here</p>
+    <a class="button" href="https://www.linkedin.com/in/anis-batrisyia-rosli-321719271/" target="_blank">Learn More</a>
+    </div>
+
+    <div class="card">
+      <img src="image/Strategic Planning.jpg" alt="Strategic Planning">
+      <h3 class="card-title">Strategic Planning</h3>
+      <p class="card-text">Description goes here</p>
+      <a class="button" href="https://www.linkedin.com/in/anis-batrisyia-rosli-321719271/" target="_blank">Learn More</a>
+      </div>
 </section>
 
 <section class="col-span-4">
   <img src="image/anisbatrisyiarosli.jpg" alt="Photo of Anis" class="circle">
-  <h3>Project</h3>
+  <h3>Project 1</h3>
   <p>Description goes here</p>
 </section>
 
@@ -42,6 +68,8 @@
   <p>Description goes here</p>
 </section>
 
+<!-- End Card Section --> 
+ 
 
 <footer>
   <p>&copy; 2025 Anis Batrisyia Rosli</p>
