Fixed HTML typo

--- a/assignments/work.html
+++ b/assignments/work.html
@@ -15,7 +15,7 @@
 
 <nav>
 <ul> 
-  <li><a href ="index.html">About</a></li>
+  <li><a href="index.html">About</a></li>
   <li><a href="work.html">Work</a></li>
    <li><a href="contact.html">Contact</a></li>
 </ul> 
@@ -27,7 +27,7 @@
 
 <!-- Card Section -->
 
-<section class="work-secton">
+<section class="work-section">
   <div class="card">
   <img src="image/Advertising.jpg" alt="Advertising">
   <h3 class="card-title">Advertising</h3>
